Port to NeoForge 1.21.1, variant tab + Spawn tooltip compat