@@ -2,11 +2,13 @@ package net.voidarkana.fintastic.common.entity.custom;
 
 import net.minecraft.Util;
 import net.minecraft.core.BlockPos;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.EntityDataSerializers;
 import net.minecraft.network.syncher.SynchedEntityData;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.tags.BiomeTags;
 import net.minecraft.tags.FluidTags;
@@ -21,13 +23,14 @@ import net.minecraft.world.entity.ai.goal.TemptGoal;
 import net.minecraft.world.entity.animal.Bucketable;
 import net.minecraft.world.entity.animal.WaterAnimal;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.component.CustomData;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.ServerLevelAccessor;
 import net.minecraft.world.level.biome.Biomes;
 import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.storage.loot.BuiltInLootTables;
+import net.minecraft.world.level.storage.loot.LootTable;
 import net.voidarkana.fintastic.Fintastic;
 import net.voidarkana.fintastic.common.entity.FintyEntities;
 import net.voidarkana.fintastic.common.entity.custom.ai.FishBreedGoal;
@@ -46,19 +49,19 @@ public class FintasticSalmon extends VariantSchoolingFish {
     private static final Ingredient FOOD_ITEMS = Ingredient.of(FintyTags.Items.FISH_FEED);
     private static final EntityDataAccessor<Integer> SIZE = SynchedEntityData.defineId(FintasticSalmon.class, EntityDataSerializers.INT);
 
-    public FintasticSalmon(EntityType<? extends BreedableWaterAnimal> pEntityType, Level pLevel) {
-        super(pEntityType, pLevel);
+    public FintasticSalmon(EntityType<? extends BreedableWaterAnimal> entityType, Level level) {
+        super(entityType, level);
         this.refreshDimensions();
     }
 
-    public void onSyncedDataUpdated(EntityDataAccessor<?> pKey) {
+    public void onSyncedDataUpdated(EntityDataAccessor<?> key) {
         this.refreshDimensions();
-        super.onSyncedDataUpdated(pKey);
+        super.onSyncedDataUpdated(key);
     }
 
     @Override
-    public EntityDimensions getDimensions(Pose pPose) {
-        return super.getDimensions(pPose).scale(SalmonSize.byId(this.getSize()).sizeMultiplier*1.3f);
+    protected EntityDimensions getDefaultDimensions(Pose pose) {
+        return super.getDefaultDimensions(pose).scale(SalmonSize.byId(this.getSize()).sizeMultiplier*1.3f);
     }
 
     public static AttributeSupplier.Builder createAttributes() {
@@ -75,9 +78,9 @@ public class FintasticSalmon extends VariantSchoolingFish {
     }
 
     @Override
-    protected void defineSynchedData() {
-        super.defineSynchedData();
-        this.entityData.define(SIZE, SalmonSize.MEDIUM.getSizeNumber());
+    protected void defineSynchedData(SynchedEntityData.Builder builder) {
+        super.defineSynchedData(builder);
+        builder.define(SIZE, SalmonSize.MEDIUM.getSizeNumber());
     }
 
     public void addAdditionalSaveData(CompoundTag compound) {
@@ -100,68 +103,64 @@ public class FintasticSalmon extends VariantSchoolingFish {
 
     @Override
     public void saveToBucketTag(ItemStack bucket) {
-        CompoundTag compoundnbt = bucket.getOrCreateTag();
         Bucketable.saveDefaultDataToBucketTag(this, bucket);
-        compoundnbt.putFloat("Health", this.getHealth());
-        compoundnbt.putInt("Variant", this.getVariant());
-        compoundnbt.putInt("Age", this.getAge());
-        compoundnbt.putString("Size", SalmonSize.byId(this.getSize()).getSerializedName());
+        CustomData.update(DataComponents.BUCKET_ENTITY_DATA, bucket, compoundnbt -> {
+            compoundnbt.putFloat("Health", this.getHealth());
+            compoundnbt.putInt("Variant", this.getVariant());
+            compoundnbt.putInt("Age", this.getAge());
+            compoundnbt.putString("Size", SalmonSize.byId(this.getSize()).getSerializedName());
 
-        compoundnbt.putBoolean("CanGrow", this.getCanGrowUp());
+            compoundnbt.putBoolean("CanGrow", this.getCanGrowUp());
+        });
         if (this.hasCustomName()) {
-            bucket.setHoverName(this.getCustomName());
+            bucket.set(DataComponents.CUSTOM_NAME, this.getCustomName());
         }
     }
 
     @Override
-    public void loadFromBucketTag(CompoundTag pTag) {
-        Bucketable.loadDefaultDataFromBucketTag(this, pTag);
+    public void loadFromBucketTag(CompoundTag tag) {
+        Bucketable.loadDefaultDataFromBucketTag(this, tag);
 
-        if (pTag.contains("Variant")) {
-            this.setVariant(pTag.getInt("Variant"));
+        if (tag.contains("Variant")) {
+            this.setVariant(tag.getInt("Variant"));
         }
-        if (pTag.contains("Age")) {
-            this.setAge(pTag.getInt("Age"));
+        if (tag.contains("Age")) {
+            this.setAge(tag.getInt("Age"));
         }
-        if (pTag.contains("Size")) {
-            this.setSize(SalmonSize.byName(pTag.getString("Size")).getSizeNumber());
+        if (tag.contains("Size")) {
+            this.setSize(SalmonSize.byName(tag.getString("Size")).getSizeNumber());
+        }
+        if (tag.contains("CanGrow")) {
+            this.setCanGrowUp(tag.getBoolean("CanGrow"));
         }
     }
 
     @Nullable
     @Override
-    public SpawnGroupData finalizeSpawn(ServerLevelAccessor pLevel, DifficultyInstance pDifficulty, MobSpawnType pReason, @Nullable SpawnGroupData pSpawnData, @Nullable CompoundTag pDataTag) {
+    public SpawnGroupData finalizeSpawn(ServerLevelAccessor level, DifficultyInstance difficulty, MobSpawnType reason, @Nullable SpawnGroupData spawnData) {
 
-        super.finalizeSpawn(pLevel, pDifficulty, pReason, pSpawnData, pDataTag);
+        super.finalizeSpawn(level, difficulty, reason, spawnData);
 
-        if (pReason == MobSpawnType.BUCKET && pDataTag != null && pDataTag.contains("Variant", 3)) {
-            this.setVariant(pDataTag.getInt("Variant"));
-            if (pDataTag.contains("Age")) {
-                this.setAge(pDataTag.getInt("Age"));
-            }
-            this.setSize(SalmonSize.byName(pDataTag.getString("Size")).getSizeNumber());
-            this.setCanGrowUp(pDataTag.getBoolean("CanGrow"));
-        }else if (pReason != MobSpawnType.SPAWN_EGG && !(pReason == MobSpawnType.BUCKET && pDataTag == null)){
+        if (reason != MobSpawnType.SPAWN_EGG && reason != MobSpawnType.BUCKET){
 
             int variant;
 
-            if (pSpawnData instanceof FishGroupData){
-                FishGroupData fish$fishgroupdata = (FishGroupData)pSpawnData;
+            if (spawnData instanceof FishGroupData fish$fishgroupdata){
                 variant = fish$fishgroupdata.variant;
 
-                this.startFollowing(((FishGroupData)pSpawnData).leader);
+                this.startFollowing(fish$fishgroupdata.leader);
             }else {
 
-                if (pLevel.getBiome(this.blockPosition()).is(Biomes.FROZEN_OCEAN) || pLevel.getBiome(this.blockPosition()).is(Biomes.DEEP_FROZEN_OCEAN) ||
-                        pLevel.getBiome(this.blockPosition()).is(Biomes.COLD_OCEAN) || pLevel.getBiome(this.blockPosition()).is(Biomes.DEEP_COLD_OCEAN) && this.getRandom().nextBoolean()){
+                if (level.getBiome(this.blockPosition()).is(Biomes.FROZEN_OCEAN) || level.getBiome(this.blockPosition()).is(Biomes.DEEP_FROZEN_OCEAN) ||
+                        level.getBiome(this.blockPosition()).is(Biomes.COLD_OCEAN) || level.getBiome(this.blockPosition()).is(Biomes.DEEP_COLD_OCEAN) && this.getRandom().nextBoolean()){
                     variant = SalmonVariant.ARCTIC_CHAR.getVariant();
                 }else {
                     do {
                         variant = Util.getRandom(SalmonVariant.values(), this.getRandom()).getVariant();
-                    } while (variant == SalmonVariant.RAINBOW_TROUT.getVariant() && !pLevel.getBiome(this.blockPosition()).is(BiomeTags.IS_RIVER));
+                    } while (variant == SalmonVariant.RAINBOW_TROUT.getVariant() && !level.getBiome(this.blockPosition()).is(BiomeTags.IS_RIVER));
                 }
 
-                pSpawnData = new FishGroupData(this, variant);
+                spawnData = new FishGroupData(this, variant);
             }
 
             this.setVariant(variant);
@@ -171,7 +170,7 @@ public class FintasticSalmon extends VariantSchoolingFish {
             this.setSize(Util.getRandom(SalmonSize.values(), this.getRandom()).getSizeNumber());
         }
 
-        return pSpawnData;
+        return spawnData;
     }
 
     public String getVariantName(){
@@ -185,17 +184,17 @@ public class FintasticSalmon extends VariantSchoolingFish {
 
 
     @Override
-    public boolean canMate(BreedableWaterAnimal pOtherAnimal) {
-        FintasticSalmon mate = (FintasticSalmon) pOtherAnimal;
-        return super.canMate(pOtherAnimal) && this.getVariant() == mate.getVariant();
+    public boolean canMate(BreedableWaterAnimal otherAnimal) {
+        FintasticSalmon mate = (FintasticSalmon) otherAnimal;
+        return super.canMate(otherAnimal) && this.getVariant() == mate.getVariant();
     }
 
     static class FishGroupData extends SchoolSpawnGroupData {
         final int variant;
 
-        FishGroupData(FintasticSalmon pLeader, int pVariant) {
-            super(pLeader);
-            this.variant = pVariant;
+        FishGroupData(FintasticSalmon leader, int variant) {
+            super(leader);
+            this.variant = variant;
         }
     }
 
@@ -231,12 +230,12 @@ public class FintasticSalmon extends VariantSchoolingFish {
         public static final EnumCodec<SalmonVariant> CODEC
                 = StringRepresentable.fromEnum(SalmonVariant::values);
 
-        public static SalmonVariant byId(int pId) {
-            return BY_ID.apply(pId);
+        public static SalmonVariant byId(int id) {
+            return BY_ID.apply(id);
         }
 
-        public static SalmonVariant byName(String pName) {
-            return CODEC.byName(pName, VANILLA);
+        public static SalmonVariant byName(String name) {
+            return CODEC.byName(name, VANILLA);
         }
     }
     public enum SalmonSize implements StringRepresentable {
@@ -251,10 +250,10 @@ public class FintasticSalmon extends VariantSchoolingFish {
         private final float sizeMultiplier;
         private final float yBodyOffset;
 
-        SalmonSize(int pSize, String name, float pMultiplier, float yBodyOffset){
-            this.size = pSize;
+        SalmonSize(int size, String name, float multiplier, float yBodyOffset){
+            this.size = size;
             this.name = name;
-            this.sizeMultiplier = pMultiplier;
+            this.sizeMultiplier = multiplier;
             this.yBodyOffset = yBodyOffset;
         }
 
@@ -281,24 +280,25 @@ public class FintasticSalmon extends VariantSchoolingFish {
         public static final EnumCodec<SalmonSize> CODEC
                 = StringRepresentable.fromEnum(SalmonSize::values);
 
-        public static SalmonSize byId(int pId) {
-            return BY_ID.apply(pId);
+        public static SalmonSize byId(int id) {
+            return BY_ID.apply(id);
         }
 
-        public static SalmonSize byName(String pName) {
-            return CODEC.byName(pName, MEDIUM);
+        public static SalmonSize byName(String name) {
+            return CODEC.byName(name, MEDIUM);
         }
     }
 
-    public ResourceLocation getDefaultLootTable() {
-        return new ResourceLocation(Fintastic.MOD_ID, "entities/salmon/"+SalmonSize.byId(this.getSize()).getSerializedName());
+    public ResourceKey<LootTable> getDefaultLootTable() {
+        return ResourceKey.create(Registries.LOOT_TABLE,
+                Fintastic.location("entities/salmon/"+SalmonSize.byId(this.getSize()).getSerializedName()));
     }
 
     @Nullable
     @Override
-    public BreedableWaterAnimal getBreedOffspring(ServerLevel pLevel, BreedableWaterAnimal pOtherParent) {
-        FintasticSalmon otherParent = (FintasticSalmon) pOtherParent;
-        FintasticSalmon baby = FintyEntities.SALMON.get().create(pLevel);
+    public BreedableWaterAnimal getBreedOffspring(ServerLevel level, BreedableWaterAnimal mate) {
+        FintasticSalmon otherParent = (FintasticSalmon) mate;
+        FintasticSalmon baby = FintyEntities.SALMON.get().create(level);
 
         if (baby != null){
 
@@ -309,30 +309,30 @@ public class FintasticSalmon extends VariantSchoolingFish {
                 case 1:
                     if (this.random.nextBoolean()){
                         if (this.random.nextBoolean())
-                            size = Math.min(4, Math.max(0, this.getSize() + this.getRandom().nextInt(-1, 2)));
+                            size = Math.clamp(this.getSize() + this.getRandom().nextInt(-1, 2), 0, 4);
                         else
-                            size = Math.min(4, Math.max(0, otherParent.getSize() + this.getRandom().nextInt(-1, 2)));
+                            size = Math.clamp(otherParent.getSize() + this.getRandom().nextInt(-1, 2), 0, 4);
                     }else {
                         size = Util.getRandom(SalmonSize.values(), this.getRandom()).getSizeNumber();
                     }
                     break;
                 case 2:
                     if (this.random.nextBoolean())
-                        size = Math.min(4, Math.max(0, this.getSize() + this.getRandom().nextInt(0, 2)));
+                        size = Math.clamp(this.getSize() + this.getRandom().nextInt(0, 2), 0, 4);
                     else
-                        size = Math.min(4, Math.max(0, otherParent.getSize() + this.getRandom().nextInt(0, 2)));
+                        size = Math.clamp(otherParent.getSize() + this.getRandom().nextInt(0, 2), 0, 4);
                     break;
                 case 3:
                     if (this.getSize() >= otherParent.getSize())
-                        size = Math.min(4, Math.max(0, this.getSize() + this.getRandom().nextInt(0, 2)));
+                        size = Math.clamp(this.getSize() + this.getRandom().nextInt(0, 2), 0, 4);
                     else
-                        size = Math.min(4, Math.max(0, otherParent.getSize() + this.getRandom().nextInt(0, 2)));
+                        size = Math.clamp(otherParent.getSize() + this.getRandom().nextInt(0, 2), 0, 4);
                     break;
                 default:
                     if (this.random.nextBoolean()){
-                        size = Math.min(4, Math.max(0, this.getSize() + this.getRandom().nextInt(-1, 2)));
+                        size = Math.clamp(this.getSize() + this.getRandom().nextInt(-1, 2), 0, 4);
                     }else {
-                        size = Math.min(4, Math.max(0, otherParent.getSize() + this.getRandom().nextInt(-1, 2)));
+                        size = Math.clamp(otherParent.getSize() + this.getRandom().nextInt(-1, 2), 0, 4);
                     }
                     break;
             }
@@ -344,10 +344,10 @@ public class FintasticSalmon extends VariantSchoolingFish {
         return baby;
     }
 
-    public static boolean checkSurfaceWaterAnimalSpawnRules(EntityType<? extends WaterAnimal> pWaterAnimal, LevelAccessor pLevel, MobSpawnType pSpawnType, BlockPos pPos, RandomSource pRandom) {
-        int i = pLevel.getSeaLevel();
+    public static boolean checkSurfaceWaterAnimalSpawnRules(EntityType<? extends WaterAnimal> waterAnimal, LevelAccessor level, MobSpawnType spawnType, BlockPos pos, RandomSource random) {
+        int i = level.getSeaLevel();
         int j = i - 25;
-        return FintyCommonConfig.ALLOW_FINTASTIC_SALMON.get() && pPos.getY() >= j && pPos.getY() <= i && pLevel.getFluidState(pPos.below()).is(FluidTags.WATER) && pLevel.getBlockState(pPos.above()).is(Blocks.WATER);
+        return FintyCommonConfig.ALLOW_FINTASTIC_SALMON.get() && pos.getY() >= j && pos.getY() <= i && level.getFluidState(pos.below()).is(FluidTags.WATER) && level.getBlockState(pos.above()).is(Blocks.WATER);
     }
 
 }
